--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,20 @@
-./*.o
-./*.swp
-./*.xcodeproj
-./*.hex
-./*.elf
-./*.pbxproj
-./*.xcworkspacedata
-./*.xccheckout
-./*.xcuserstate
-./*.xcscheme
-./*.plist
-./*.name
-./*.xml
-./*.iml
-./*.xcuserstate
-./*.xcworkspace
-./*.xcuserdatad
-./*.pyc
+*.o
+*.swp
+*.xcodeproj
+*.hex
+*.elf
+*.pbxproj
+*.xcworkspacedata
+*.xccheckout
+*.xcuserstate
+*.xcscheme
+*.plist
+*.name
+*.xml
+*.iml
+*.xcuserstate
+*.xcworkspace
+*.xcuserdatad
+*.pyc
 matlab/letter_logs/
 matlab/*.zip
